--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^6.5.1",
+    "fs": "^0.0.1-security",
     "next": "^13.1.0",
     "openai": "^3.1.0",
+    "puppeteer": "^19.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
